Adjusted max-width of d3-tip and added a font-size breakpoint at 1250px to avoid tooltips running offscreen

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -137,7 +137,9 @@ p {
       display inline-block
       margin 0
       font-weight 600
-
+    @media (max-width: 1250px)
+      font-size 12px
+      
 #sections, .text-column
   width var(--annotation-width)
   box-sizing border-box
@@ -381,7 +383,7 @@ p {
 }
 
 .d3-tip, #annotation-tooltip, #category-tooltip, #sample-tooltip {
-  max-width: 450px;
+  max-width: 480px;
 	background-color: white;
 	color: black;
 	border-radius: 5px;
